--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,17 @@
 /node_modules
 /.pnp
 .pnp.js
+config/
 
 # testing
 /coverage
 
+
 # production
 /build
+.build
+/dist
+.dist
 
 # misc
 .DS_Store
@@ -21,3 +26,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#ide
+.idea/
+idea/
