--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "classnames": "^2.2.6",
     "prettier": "^2.2.1",
     "styled-components": "^5.2.1"
   }
